[package]
name = "gst-face-swap"
version = "0.0.1"
authors = ["HummerHead87 <snooks87@gmail.com>"]
edition = "2018"
repository = "https://github.com/HummerHead87/gst-face-swap"
description = "Gstreamer plugin for face swapping with OpenCV"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10.2"
gstreamer = "0.16.3"
gstreamer-base = "0.16.3"
gstreamer-video = "0.16.3"
once_cell = "1.4.1"
opencv = {version = "0.46", features = ["opencv-4", "buildtime-bindgen", "contrib"]}
anyhow = "1.0.32"

[lib]
name = "gstrsfaceswap"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.2.0"
